--- a/results.html
+++ b/results.html
@@ -294,7 +294,7 @@
   </div>
 </main>
 
-  <style>
+<style>
   /* Default styling for links */
   a {
     color: #1a73e8; /* Default blue for links */
@@ -319,9 +319,9 @@
     text-decoration: none; /* No underline */
   }
 
-  /* Hover effect for conference links */
+  /* Hover effect for conference links (now properly changes color) */
   .pub a.conference:hover {
-    color: #4da6ff; /* Light blue on hover */
+    color: #4da6ff !important; /* Light blue on hover */
     text-decoration: underline; /* Underline on hover */
   }
 
@@ -330,6 +330,7 @@
     color: #4da6ff; /* Change icon color to match the text hover color */
   }
 </style>
+
 
 
 
