--- a/results.html
+++ b/results.html
@@ -145,7 +145,36 @@
 <main>
   <h2 class="section-heading">Publications</h2>
 
-  <!-- Publication 10 -->
+
+  <!-- Publication 13 -->
+  <div class="pub">
+    <h3>Instagram Reactions to a Virtual Dining Companion: Qualitative Coding vs. Automated Sentiment Analysis</h3>
+    <p><strong>Authors:</strong> Hunter Fong, Magdalena Igras-Cybulska, Radoslaw Niewiadomski</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://chitaly2025.di.unisa.it" target="_blank" class="conference">
+        16th Biannual Conference of the Italian SIGCHI Chapter (CHItaly 2025), October 6–10, 2025, Salerno, Italy
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/10.1145/3750069.3750352" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+    </p>
+  </div>
+  
+<!-- Publication 12 -->
+  <div class="pub">
+    <h3>Individual Differences in Social and Emotional Responses to Robotic Dining Companions: Toward Personalized Interaction Design</h3>
+    <p><strong>Authors:</strong> Hunter Fong, Selim Soufargi, Maurizio Mancini, Radoslaw Niewiadomski</p>
+    <p><strong>Conference:</strong> 
+      <a href="https://icsr2025.eu" target="_blank" class="conference">
+        17th International Conference on Social Robotics + AI (ICSR 2025), September 10-12, 2025, Napoli, Italy
+      </a>
+    </p>
+    <p>
+      <a href="???" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+    </p>
+  </div>
+
+  <!-- Publication 11 -->
   <div class="pub">
     <h3>Designing Interactions for Artificial Commensal Companions</h3>
     <p><strong>Authors:</strong> Hunter Fong, Selim Soufargi, Maurizio Mancini, Radoslaw Niewiadomski</p>
@@ -161,7 +190,7 @@
     </p>
   </div>
 
-  <!-- Publication 9 -->
+  <!-- Publication 10 -->
   <div class="pub">
     <h3>Toward Modeling Commensal Interactions in Human Dyads</h3>
     <p><strong>Authors:</strong> Radoslaw Niewiadomski, Cigdem Beyan</p>
@@ -176,7 +205,7 @@
     </p>
   </div>
 
-  <!-- Publication 8 -->
+  <!-- Publication 9 -->
   <div class="pub">
     <h3>A Social Robot Companion for Individuals Eating Alone</h3>
     <p><strong>Authors:</strong> Selim Soufargi, Hunter Fong, Radoslaw Niewiadomski, Maurizio Mancini</p>
@@ -192,7 +221,7 @@
     </p>
   </div>
 
-  <!-- Publication 7 -->
+  <!-- Publication 8 -->
   <div class="pub">
     <h3>Automatic Recognition of Commensal Activities in Co-located and Online settings</h3>
     <p><strong>Authors:</strong> Yazgi, K., Beyan, C., Mancini, M., Niewiadomski, R.</p>
@@ -203,11 +232,11 @@
     </p>
     <p>
       <a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686219" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
-      <a href="images/COFI2024_Kheder.pdf" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a>
+      <a href="???" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a>
     </p>
   </div>
 
-  <!-- Publication 6 -->
+  <!-- Publication 7 -->
   <div class="pub">
     <h3>Do We Need Artificial Dining Companions? Exploring Human Attitudes Toward Robots in Commensality Settings</h3>
     <p><strong>Authors:</strong> Hoxha, A., Fong, H., Niewiadomski, R.</p>
@@ -218,13 +247,13 @@
     </p>
     <p>
       <a href="https://dl.acm.org/doi/pdf/10.1145/3686215.3686220" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
-      <a href="images/COFI2024_Albana.pdf" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a>
+      <a href="???" target="_blank"><i class="fas fa-image"></i> View Poster (PDF)</a>
     </p>
   </div>
 
-  <!-- Publication 5 -->
+  <!-- Publication 6 -->
   <div class="pub">
-    <h3>Sounding bodies: Exploring sonification to promote physical contact</h3>
+    <h3>Sounding bodies: Exploring Sonification to Promote Physical Contact</h3>
     <p><strong>Authors:</strong> Chiara Gulino, Radoslaw Niewiadomski</p>
     <p><strong>Conference:</strong> 
       <a href="https://avi2024.dibris.unige.it/" target="_blank" class="conference">
@@ -236,9 +265,9 @@
     </p>
   </div>
 
-  <!-- Publication 4 -->
+  <!-- Publication 5 -->
   <div class="pub">
-    <h3>Multimodal interactive VR mindfulness experience</h3>
+    <h3>Multimodal Interactive VR Mindfulness Experience</h3>
     <p><strong>Authors:</strong> Maurizio Mancini, Radoslaw Niewiadomski, Giovanna Varni, Andrea Chirico, Tommaso Palombi, Fabio Alivernini, Fabio Lucidi</p>
     <p><strong>Conference:</strong> 
       <a href="https://avi2024.dibris.unige.it/" target="_blank" class="conference">
@@ -247,6 +276,20 @@
     </p>
     <p>
       <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656753" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a>
+    </p>
+  </div>
+
+  <!-- Publication 4 -->
+  <div class="pub">
+    <h3>Towards the Dataset for Analysis and Recognition of Facial Expressions Intensity</h3>
+    <p><strong>Authors:</strong> Tiuleneva M., Castano E., Niewiadomski, R.</p>
+   <p><strong>Conference:</strong> 
+      <a href="https://avi2024.dibris.unige.it/" target="_blank" class="conference">
+        17th International Conference on Advanced Visual Interfaces (AVI 2024), June 3-7, 2024, Arenzano (Genoa), Italy
+      </a>
+    </p>
+    <p>
+      <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656711" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a>
     </p>
   </div>
 
@@ -279,7 +322,7 @@
     </p>
   </div>
 
-  <!-- Publication 1 -->
+    <!-- Publication 1 -->
   <div class="pub">
     <h3>How Do We Perceive the Intensity of Facial Expressions? The PIFE Dataset for Analysis of Perceived Intensity</h3>
     <p><strong>Authors:</strong> Tiuleneva M., Castano E., Niewiadomski, R.</p>
@@ -289,9 +332,10 @@
       </a>
     </p>
     <p>
-      <a href="https://dl.acm.org/doi/pdf/10.1145/3656650.3656711" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a>
+      <a href="https://ieeexplore.ieee.org/document/10970310" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a>
     </p>
   </div>
+  
 </main>
 
 <style>
