--- a/results.html
+++ b/results.html
@@ -156,7 +156,7 @@
       </a>
     </p>
     <p>
-      <a href="https://dl.acm.org/doi/10.1145/3750069.3750352" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+      <a href="https://dl.acm.org/doi/10.1145/3750069.3750352" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> 
     </p>
   </div>
   
@@ -170,7 +170,7 @@
       </a>
     </p>
     <p>
-      <a href="???" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> | 
+      <a href="???" target="_blank"><i class="fas fa-file-pdf"></i> Read the paper</a> 
     </p>
   </div>
 
