--- a/outreach.html
+++ b/outreach.html
@@ -129,6 +129,15 @@
     <h2 class="section-heading">Outreach & Community</h2>
 
     <div class="event-highlight">
+        <h3><a href="https://chitaly2025.di.unisa.it" target="_blank" style="color: #2a72c4; text-decoration: none;">16th Biannual Conference of the Italian SIGCHI Chapter (CHIItaly 2025)</a></h3>
+        <p>Technologies and Methodologies of Human-Computer Interaction in the Third Millenium</p>
+        
+        <!-- Embed PDF in iframe for scrollable view -->
+        <iframe src="images/CHIItaly25.pdf" width="100%" height="600px" style="border: none;"></iframe>
+    </div>
+
+
+    <div class="event-highlight">
         <h3><a href="https://icsr2025.eu" target="_blank" style="color: #2a72c4; text-decoration: none;">17th Annual International Conference on Social Robotics + AI (ICSR 2025)</a></h3>
         <p>This event brought together leading experts, researchers, and professionals from around the world to discuss the latest advancements in “Social Robotics and Artificial Intelligence”. The conference theme, "Emotivation at the Core: Empowering Social Robots to Inspire and Connect," highlighted the essential role of “Emotivation” in social robotics. Emotivation captures the synergy between emotion and motivation, where emotions trigger and sustain motivation during interactions. In social robotics, this concept is key to building trust, fostering empathy, and supporting decision-making by enabling robots to respond sensitively to human emotions, inspiring engagement and action.</p>
         
