--- a/outreach.html
+++ b/outreach.html
@@ -79,7 +79,7 @@
 
     .event-highlight img {
       max-width: 100%;
-      border-radius: 12px;
+      border-radius: 12px;f
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
       margin-top: 1rem;
     }
@@ -104,7 +104,7 @@
 </head>
 
 <body>
- <header>
+ <header>df
   <a href="index.html"><img alt="Logo" src="cocoa-logo_color.png" class="logo-main"></a>
   <div class="logo-wrapper">
     <figure>
@@ -130,7 +130,7 @@
 
     <div class="event-highlight">
         <h3><a href="https://chitaly2025.di.unisa.it" target="_blank" style="color: #2a72c4; text-decoration: none;">16th Biannual Conference of the Italian SIGCHI Chapter (CHIItaly 2025)</a></h3>
-        <p>Technologies and Methodologies of Human-Computer Interaction in the Third Millenium</p>
+        <p>Researchers, designers, and practitioners explored emerging directions in Human–Computer Interaction (HCI) under the theme “Technologies and Methodologies of Human–Computer Interaction in the Third Millennium,”. The conference highlighted innovative approaches that bridge human-centered design, artificial intelligence, and interactive technologies shaping contemporary life. Held in collaboration with <strong><a href="https://sigchi.org" target="_blank" style="color: #2a72c4; text-decoration: none;">ACM SIGCHI Italy</a></strong>, CHIItaly 2025 serves as a national and international forum for sharing cutting-edge research, fostering interdisciplinary dialogue, and envisioning the future of digital interaction in academic, industrial, and societal contexts.</p>
         
         <!-- Embed PDF in iframe for scrollable view -->
         <iframe src="images/CHIItaly25.pdf" width="100%" height="600px" style="border: none;"></iframe>
